2024-01-08T08:19:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7444817279 # 4
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 587 1009 / 590 1013
* notice: next accum: outdated-unq outdated-all / unq all: 587 1009 / 591 1014
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-08]

2024-01-08T01:07:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7441963323 # 3
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 586 1008 / 590 1013
* notice: next accum: outdated-unq outdated-all / unq all: 587 1009 / 590 1013
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-25] / []

2024-01-07T16:17:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7439355585 # 2
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-07
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 586 1008 / 589 1012
* notice: next accum: outdated-unq outdated-all / unq all: 586 1008 / 590 1013
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-07]

2024-01-07T08:17:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7437025074 # 1