@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-08T08:19:39Z",
+  "timestamp" : "2024-01-08T16:19:02Z",
   "count_outdated" : 1009,
   "uniques_outdated" : 587,
-  "count" : 1014,
-  "uniques" : 591,
+  "count" : 1016,
+  "uniques" : 592,
   "clones" : [
     {
       "timestamp": "2023-12-26T00:00:00Z",
@@ -34,12 +34,12 @@
     },
     {
       "timestamp": "2024-01-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
