@@ -1,6 +1,6 @@
 {
-  "count": 5,
-  "uniques": 3,
+  "count": 7,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2023-12-26T00:00:00Z",
@@ -19,8 +19,8 @@
     },
     {
       "timestamp": "2024-01-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
