@@ -1,3 +1,12 @@
+2024-01-08T16:19:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7450190175 # 5
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
+* notice: last 14d: unq all: 4 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 587 1009 / 591 1014
+* notice: next accum: outdated-unq outdated-all / unq all: 587 1009 / 592 1016
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2024-01-08]
+
 2024-01-08T08:19:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7444817279 # 4
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
